[gd_scene load_steps=2 format=3 uid="uid://byk3vuk57ftj0"]

[ext_resource type="Script" path="res://scenes/component/choice_screen.gd" id="1_ydysi"]

[node name="ChoiceScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ydysi")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 0.576471)

[node name="MarginContainLeft" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -990.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 180
theme_override_constants/margin_top = 180
theme_override_constants/margin_right = 180
theme_override_constants/margin_bottom = 180

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainLeft"]
layout_mode = 2
theme_override_constants/separation = 240

[node name="MarginContainerRight" type="MarginContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -990.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 180
theme_override_constants/margin_top = 180
theme_override_constants/margin_right = 180
theme_override_constants/margin_bottom = 180

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerRight"]
layout_mode = 2
theme_override_constants/separation = 220
